syntax = "proto3";
package transport;


service SendDummyRuntime {
  rpc SendDummyRuntime (SendDummyRuntimeData) returns (EmptySendDummyData) {}
}

message SendDummyRuntimeData {
  map<string, EmptySendDummyData> services = 1;
  string id = 2;
}

message EmptySendDummyData {
  string id = 1;
}
